OPCS eternal averages