@@ -1,6 +1,6 @@
 package uk.org.sehicl.website.report;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Objects;
 
 import uk.org.sehicl.website.data.League;
@@ -10,32 +10,38 @@ import uk.org.sehicl.website.data.TeamInMatch;
 
 public class TeamSelector implements AveragesSelector
 {
-    private final String teamId;
-    
+    private final List<String> teamIds;
+
     public TeamSelector(String teamId)
     {
-        this.teamId = teamId;
+        this(List.of(teamId));
+    }
+
+    public TeamSelector(List<String> teamIds)
+    {
+        this.teamIds = teamIds;
     }
 
     @Override
     public boolean isSelected(League league)
     {
-        boolean answer = league.getTeam(teamId) != null;
-        return answer;
+        return teamIds.stream().map(league::getTeam).anyMatch(Objects::nonNull);
     }
 
     @Override
     public boolean isSelected(Match match)
     {
-        boolean answer = Arrays.asList(match.getHomeTeamId(), match.getAwayTeamId()).contains(teamId);
-        return answer;
+        return teamIds
+                .stream()
+                .anyMatch(List.of(match.getHomeTeamId(), match.getAwayTeamId())::contains);
     }
 
     @Override
     public boolean isSelected(TeamInMatch teamInMatch, boolean batting)
     {
-        boolean answer = batting == Objects.equals(teamInMatch.getTeamId(), teamId);
-        return answer;
+        return teamIds
+                .stream()
+                .anyMatch(teamId -> batting == Objects.equals(teamInMatch.getTeamId(), teamId));
     }
 
     @Override
